syntax = "proto3";

option csharp_namespace = "Kwetter.ProfileService";

package profile;

service ProfileGRPCService {
  
	rpc GetAll (ProfileRequest) returns (ProfileResponse);

	rpc GetProfileByUsername (ProfileRequest) returns (ProfileResponse);

	rpc GetProfileByUserId (ProfileRequest) returns (ProfileResponse);

	//
	rpc CreateProfile(UpdateProfileRequest) returns (ProfileResponse);
}

// The request message containing the user's name.
message ProfileRequest {
  int32 UserId = 1;
  string Username = 2;
}

message UpdateProfileRequest {
  string name = 1;
}

message ProfileResponse {
	bool status = 1;
	repeated ProfileDto profiles = 2;
}

message ProfileDto {
	int32 Id = 1;
	int32 UserId = 2;
	string DisplayName = 3;
	string Website = 4;
	int64 CreatedAt = 5;
	int64 UpdatedAt = 6;
}
